--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
-    "sass": "^1.93.2"
+    "sass": "^1.93.2",
+    "spinners-react": "^1.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
