--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "axios": "^1.12.2",
+    "i18next": "^25.5.3",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
+    "react-i18next": "^16.0.0",
     "react-router-dom": "^7.9.3",
     "sass": "^1.93.2",
     "spinners-react": "^1.0.11",
